--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-responsive-carousel": "^3.1.43",
     "react-scripts": "2.1.1"
   },
   "scripts": {
